# graphworks

./: .gitignore  .icewormignore  .mdl_style.rb  .pre-commit-config.yaml  CLAUDE.md  Graph.py  LICENSE  README.md  conftest.py  graphworks.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: publish-to-pypi.yml  python-package-ci.yml  python-package.yml
.run/: Run Demo.run.xml
examples/: README.md  __init__.py  demo.py  g1.json  g1.txt  g2.json  g2.txt  g3.json  g3.txt  g4.json
graphworks/: README.md  __init__.py  export.py  functions.py  graph.py  graph_iterator.py  setup.cfg
graphworks/algorithms/: basic.py  dag.py  directed.py  general.py  search.py  sort.py
graphworks/export/: export.py  graphviz.py  json.py  json_utils.py
graphworks/import/: import.py
src/graphworks/: README.md  __init__.py  edge.py  graph.py  numpy_compat.py  types.py  utilities.py  vertex.py
src/graphworks/algorithms/: __init__.py  basic.py  directed.py  paths.py  properties.py  search.py  sort.py
src/graphworks/data/: g2.json  g3.json
src/graphworks/export/: __init__.py  graphviz_utils.py  json_utils.py
tests/: __init__.py  basic_tests.py  directed_tests.py  edge_tests.py  export_tests.py  graph_iterator_tests.py  graph_tests.py  search_tests.py  sort_tests.py  test_directed.py  test_edge.py  test_export.py  test_graph.py  test_graph_fluent_chaining.py  test_graph_union.py  test_numpy_compat.py  test_paths.py  test_properties.py  test_search.py  test_sort.py  test_vertex.py
tests/algorithms/: test_directed.py  test_paths.py  test_properties.py  test_search.py  test_sort.py
tests/export/: test_graphviz_utils.py  test_json_utils.py
