[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "graphworks"
description = "Graph theoretic classes and helper functions."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [ "graphviz", "numpy",]
dynamic = [ "version",]

[project.license]
text = "MIT"

[[project.authors]]
name = "Nathan Gilbert"
email = "nathan.gilbert@gmail.com"

[project.urls]
Homepage = "https://github.com/nathan-gilbert/graphworks"
"Bug Tracker" = "https://github.com/nathan-gilbert/graphworks/issues"

[tool.hatch.version]
path = "src/graphworks/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [ "src/graphworks",]

[tool.uv]
dev-dependencies = [ "pytest", "pytest-cov", "black", "ruff", "ty", "import-linter", "radon",]

[tool.black]
line-length = 88
target-version = [ "py313", "py314", "py315",]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [ "E", "W", "F", "I", "UP", "B", "C4", "SIM",]
ignore = []

[tool.ruff.lint.isort]
known-first-party = [ "graphworks",]

[tool.ty]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = [ "tests",]
addopts = "--tb=short -v"

[tool.coverage.run]
source = [ "src/graphworks",]
omit = [ "tests/*",]

[tool.coverage.report]
show_missing = true
