[metadata]
name = graphworks
version = attr: graphworks.__version__
author = Nathan Gilbert
author_email = nathan.gilbert@gmail.com
description = Graph theoretic classes and helper functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nathan-gilbert/graphworks
project_urls =
    Bug Tracker = https://github.com/nathan-gilbert/graphworks/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
license = MIT
include_package_data = True
zip_safe = False

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy ==1.21.5
    graphviz ==0.19.1

[options.packages.find]
where = src